--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -7,6 +7,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/iv_item_movie_poster" />
+        android:id="@+id/iv_item_movie_poster"
+        android:contentDescription="@string/detail_image_description"/>
 
 </FrameLayout>
